<resources>
    <string name="app_name">LiuHePay</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="titlebar_left_btn">返回</string>
    <string name="titlebar_right_btn">确定</string>
    <string name="titlebar_text">标题</string>
    <string name="error_tip">操作有误</string>
    <string name="error_crash_exit_tip">程序异常退出</string>
    <string name="login_username">操作员号：</string>
    <string name="login_password">密              码：</string>
    <string name="login_btn">登录</string>
    <string name="username_not_allow_null">操作员号不能为空</string>
    <string name="exit">再按一次退出程序</string>
    <string name="function_selection">中国银联</string>
    <string name="others_pay">其他支付</string>
    <string name="trade_amount">交易金额</string>
    <string name="scan_pay">扫码支付</string>
    <string name="amount_hint">0.00</string>
    <string name="input_amount">请输入交易金额，以元为单位</string>
    <string name="input_trade_amount">请输入有效的交易金额</string>
    <string name="error_scan_pay">扫码处理异常</string>
    <string name="error_get_qrcode">获取二维码失败</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="operator_main_activity_sale">消费</string>
    <string name="preauth_main_activity">预授权类交易</string>
    <string name="print_main_activity">打印</string>
    <string name="manager_main_activity">管理</string>
    <string name="sign_activity">签到</string>
    <string name="history_query_activity">交易查询</string>
    <string name="operator_manager_activity">柜员管理</string>
    <string name="others_main_activity">其他</string>
    <string name="elec_cash_main_activity">电子现金</string>
    <string name="no_data">暂无数据</string>
    <string name="not_support">暂不支持此交易</string>
    <string-array name="array_others_pay">
        <item>微信扫码</item>
        <item>微信刷卡</item>
        <item>支付宝扫码</item>
        <item>支付宝条码</item>
    </string-array>
    <string-array name="array_operator_main_activity">
        <item>微信扫码</item>
        <item>微信刷卡</item>
        <item>支付宝扫码</item>
        <item>支付宝条码</item>
        <item>消费</item>
        <item>撤销</item>
        <item>退货</item>
        <item>预授权</item>
        <item>打印</item>
        <item>查余额</item>
        <item>管理</item>
        <item>其他</item>
    </string-array>
    <string-array name="array_preauth_main_activity">
        <item>预授权</item>
        <item>预授权完成请求</item>
        <item>预授权完成通知</item>
        <item>预授权撤销</item>
        <item>预授权完成撤销</item>
    </string-array>
    <string-array name="array_print_main_activity">
        <item>重打最后一笔</item>
        <item>重打任意一笔</item>
        <item>打印交易明细</item>
        <item>打印交易汇总</item>
    </string-array>
    <string-array name="array_manager_main_activity">
        <item>签到</item>
        <item>签退</item>
        <item>交易查询</item>
        <item>柜员</item>
        <item>外线号码</item>
        <item>结算</item>
        <item>锁定终端</item>
        <item>版本</item>
    </string-array>
    <string-array name="array_manager_sign_activity">
        <item>POS签到</item>
        <item>操作员签退</item>
    </string-array>
    <string-array name="array_manager_history_query_activity">
        <item>查询交易明细</item>
        <item>查询交易汇总</item>
        <item>按凭证号查询</item>
    </string-array>
    <string-array name="array_operator_manager_activity">
        <item>主管改密</item>
        <item>增加</item>
        <item>删除</item>
        <item>查询</item>
        <item>操作员改密</item>
    </string-array>
    <string-array name="array_others_main_activity">
        <item>电子现金</item>
        <item>指定账户圈存</item>
    </string-array>
    <string-array name="array_elec_cash_main_activity">
        <item>快速支付</item>
        <item>普通支付</item>
        <item>卡片余额查询</item>
        <item>卡片明细查询</item>
        <item>电子现金退货</item>
    </string-array>
    <string name="system_manager_activity">系统管理</string>
    <string name="system_trans_manager_activity">交易管理设置</string>
    <string name="system_communication_manager_activity">通讯参数设置</string>
    <string name="system_tmk_manager_activity">终端密钥管理</string>
    <string name="system_key_manager_activity">修改密码</string>
    <string name="system_other_manager_activity">其他功能</string>
    <string name="system_other_clear_setting_activity">清除设置</string>
    <string name="system_other_download_activity">下载</string>
    <string name="system_other_test_activity">机具测试</string>
    <string name="error_get_dao">获取dao出错</string>
    <string name="error_insert">表中插入数据失败</string>
    <string name="error_query_all">查询表中所有数据出错</string>
    <string name="error_querybyid">根据id查询表中数据出错</string>
    <string name="error_updata">更新表中的数据出错</string>
    <string name="error_delete">删除表中数据出错</string>
    <string name="format_data">yyyy-MM-dd HH:mm:ss</string>
    <string name="error_login">用户名或密码错误</string>
    <string name="error_login_username">操作员号不能为空</string>
    <string name="error_login_pwd">操作员密码不能为空</string>
    <string name="submit">确定</string>
    <string name="error_pwd_length">密码输入过短</string>
    <string name="close_trade">取消本次交易</string>
    <string name="sys_trans_switch_activity">交易控制开关</string>
    <string name="trade_switch_control_title">交易开关控制</string>
    <string name="sys_mer_info_mid">商户号：</string>
    <string name="sys_mer_info_tid">终端号：</string>
    <string name="sys_mer_info_firmid">厂商ID：</string>
    <string name="sys_mer_info_activity_title">商户参数设置</string>
    <string name="error_mid_not_allow_null">商户号不能为空</string>
    <string name="error_tid_not_allow_null">终端号不能为空</string>
    <string name="error_firmId_not_allow_null">厂商ID不能为空</string>
    <string name="sys_trans_input_pwd_title">交易输密控制</string>
    <string name="sys_trans_swipe_card_title">交易刷卡控制</string>
    <string name="sys_settle_trans_title">结算交易控制</string>
    <string name="sys_switch_offline_sent_way">离线上送方式</string>
    <string name="sys_switch_settle_before">结算前</string>
    <string name="sys_switch_offline_before">联机前</string>
    <string name="sys_switch_offline_send_count">离线上送次数</string>
    <string name="sys_offline_trans_title">离线交易控制</string>
    <string name="error_offline_send_count_not_allow_null">离线上送次数不能为空</string>
    <string name="error_auto_send_count_not_allow_null">自动上送累计笔数不能为空</string>
    <string name="save_args_success">参数保存成功</string>
    <string name="sys_others_input_pwd">是否输入主管密码撤销/退货类交易</string>
    <string name="sys_others_allow_input_cardnum">是否允许手输卡号</string>
    <string name="sys_others_default_swipe_card">默认刷卡交易</string>
    <string name="sys_others_max_quota">退货最大限额</string>
    <string name="sys_signature_trans_title">电子签名控制</string>
    <string name="sys_others_trans_title">其他交易控制</string>
    <string name="error_refund_max_quota_not_allow_null">退货限额不能为空</string>
    <string-array name="array_system_manager_activity">
        <item>商户参数设置</item>
        <item>交易管理设置</item>
        <item>系统参数设置</item>
        <item>通讯参数设置</item>
        <item>终端秘钥管理</item>
        <item>密码管理</item>
        <item>其他功能设置</item>
    </string-array>
    <string-array name="array_system_trans_manager_activity">
        <item>交易开关控制</item>
        <item>交易输密控制</item>
        <item>交易刷卡控制</item>
        <item>结算交易控制</item>
        <item>离线交易控制</item>
        <item>其他交易控制</item>
        <item>电子签名控制</item>
    </string-array>
    <string-array name="array_system_trans_switch_activity">
        <item>传统类交易开关</item>
        <item>电子现金类开关</item>
        <item>电子钱包类开关</item>
        <item>分期付款类开关</item>
        <item>积分类交易开关</item>
        <item>手机芯片类开关</item>
        <item>预约类交易开关</item>
        <item>订购类交易开关</item>
        <item>其他类交易开关</item>
    </string-array>
    <string-array name="array_switch">
        <item>消费</item>
        <item>消费撤销</item>
        <item>退货</item>
        <item>余额查询</item>
        <item>预授权</item>
        <item>预授权撤销</item>
        <item>预授权完成请求</item>
        <item>预授权完成通知</item>
        <item>预授权完成撤销</item>
        <item>离线结算</item>
        <item>离线调整</item>
    </string-array>
    <string-array name="array_switch_elec">
        <item>接触式电子现金消费</item>
        <item>快速支付（非接电子现金消费）</item>
        <item>电子现金指定账户圈存</item>
        <item>电子现金非指定账户圈存</item>
        <item>电子现金现金充值</item>
        <item>电子现金现金充值撤销</item>
        <item>电子现金脱机退货</item>
    </string-array>
    <string-array name="array_switch_elec_wallet">
        <item>电子钱包消费</item>
        <item>电子钱包指定账户圈存</item>
        <item>电子钱包非指定账户圈存</item>
        <item>电子钱包现金充值</item>
    </string-array>
    <string-array name="array_switch_bystages">
        <item>分期付款消费</item>
        <item>分期付款消费撤销</item>
    </string-array>
    <string-array name="array_switch_score">
        <item>联盟积分消费</item>
        <item>发卡行积分消费</item>
        <item>联盟积分消费撤销</item>
        <item>发卡行积分消费撤销</item>
        <item>联盟积分查询</item>
        <item>联盟积分退货</item>
    </string-array>
    <string-array name="array_switch_phone_chip">
        <item>手机消费</item>
        <item>手机消费撤销</item>
        <item>手机退货</item>
        <item>手机预授权</item>
        <item>手机预授权撤销</item>
        <item>手机余额查询</item>
    </string-array>
    <string-array name="array_switch_prepared">
        <item>预约消费</item>
        <item>预约消费撤销</item>
    </string-array>
    <string-array name="array_switch_order">
        <item>订购消费</item>
        <item>订购消费撤销</item>
        <item>订购退货</item>
        <item>订购预授权</item>
        <item>订购预授权撤销</item>
        <item>订购预授权完成请求</item>
        <item>订购预授权完成通知</item>
        <item>订购预授权完成撤销</item>
    </string-array>
    <string-array name="array_switch_other_trade">
        <item>磁条卡现金充值</item>
        <item>磁条卡账户充值</item>
    </string-array>
    <string-array name="array_switch_input_pwd">
        <item>消费撤销是否输密</item>
        <item>预授权撤销是否输密</item>
        <item>预授权完成是否输密</item>
        <item>预授权完成撤销是否输密</item>
    </string-array>
    <string-array name="array_switch_swipe_card">
        <item>消费撤销是否刷卡</item>
        <item>预授权完成撤销是否刷卡</item>
    </string-array>
    <string-array name="array_switch_settle">
        <item>结算是否自动签退</item>
        <item>结算是否打印明细</item>
    </string-array>
    <string-array name="array_switch_offline">
        <item>离线上送方式</item>
        <item>离线上送次数</item>
        <item>自动上送累计笔数</item>
    </string-array>
    <string-array name="array_switch_other">
        <item>是否输入主管密码撤销/退货类交易</item>
        <item>是否允许手输卡号</item>
        <item>默认刷卡交易</item>
        <item>原限额</item>
    </string-array>
    <string-array name="array_switch_signature">
        <item>是否支持电子签名</item>
    </string-array>
    <string-array name="array_system_communication_manager_activity">
        <item>拨号</item>
        <item>串口</item>
        <item>GPRS</item>
        <item>CDMA</item>
        <item>以太网</item>
        <item>WIFI</item>
    </string-array>
    <string-array name="array_system_tmk_manager_activity">
        <item>联机导入密钥</item>
        <item>手工输入密钥</item>
        <item>母POS导入密钥</item>
        <item>设置DES算法</item>
        <item>交易密钥索引号</item>
    </string-array>
    <string-array name="array_system_key_manager_activity">
        <item>修改管理员密码</item>
        <item>修改安全密码</item>
    </string-array>
    <string-array name="array_system_other_manager_activity">
        <item>清除设置</item>
        <item>签购单打印</item>
        <item>下载功能</item>
        <item>参数打印</item>
        <item>未知发卡行代码</item>
        <item>机具测试</item>
        <item>状态设置</item>
    </string-array>
    <string-array name="array_system_clear_setting_activity">
        <item>清冲正标志</item>
        <item>清除交易流水</item>
        <item>清脚本通知</item>
        <item>清除黑名单</item>
        <item>剩余存储空间</item>
    </string-array>
    <string-array name="array_system_download_activity">
        <item>回响测试</item>
        <item>参数下载</item>
        <item>公钥下载</item>
        <item>EMV参数下载</item>
    </string-array>
    <string-array name="array_system_test_manager_activity">
        <item>打印机</item>
        <item>显示器</item>
        <item>读卡器</item>
        <item>键盘</item>
        <item>回响测试</item>
    </string-array>
</resources>