<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ll_amount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/input_amount"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/edit_input"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:textColor="@color/text_color" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@xml/btn_blue_selector"
            android:onClick="onClick"
            android:padding="5dp"
            android:text="@string/titlebar_right_btn" />
    </LinearLayout>

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>